Fix gaps in guest view. Style home button and route to index.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -240,6 +240,7 @@ h2.logo-subtext {
   grid-template-columns: 340px 340px 340px;
   column-gap: 20px;
   grid-template-rows: auto;
+  row-gap: 20px;
 }
 
 .post-details > p {
@@ -280,7 +281,23 @@ h2.logo-subtext {
   border-radius: 100%;
   width: 40px;
   height: 40px;
-  background-color: #e4e6eb;
+  background-color: #54359C;
+  background: linear-gradient(45deg, rgba(84, 53, 156, 1) 50%, rgba(181, 149, 255, 1) 100%);
+}
+
+.logo-icon a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: 500;
+  margin: 0px;
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  font-size: 2.5em;
+  font-weight: 600;
+  position: relative;
+  top: 3px;
 }
 
 .profile {
